<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_margin="2dp">

    <TextView
        android:textColor="@color/white"
        android:background="@drawable/chip_shape"
        android:id="@+id/txtView"
        android:paddingRight="@dimen/paddingChipsHorizontal"
        android:paddingLeft="@dimen/paddingChipsHorizontal"
        android:paddingTop="@dimen/paddingChipsVertical"
        android:paddingBottom="@dimen/paddingChipsVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>