<resources>
    <string name="app_name">Privalia Mobile Challenge</string>
    <string name="title_year">REPLACE_TITLE (REPLACE_YEAR)</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="loading_movies">Loading movies.</string>
    <string name="limit">There are no more movies</string>
    <string name="overview">Overview</string>
    <string name="year">Year</string>
    <string name="popular">Popular</string>
    <string name="latest">Latest</string>
    <string name="now">Now Playing</string>
    <string name="top">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string-array name="categories">
        <item>Popular</item>
        <item>Now Playing</item>
        <item>Top Rated</item>
        <item>Upcoming</item>
    </string-array>
    <string-array name="categories_values">
        <item>popular</item>
        <item>now_playing</item>
        <item>top_rated</item>
        <item>upcoming</item>
    </string-array>
    <string name="no_internet">There is no internet connection</string>
    <string name="error">Something went wrong</string>
    <string name="getting">Loading REPLACE list</string>
    <string name="no_data">No results</string>
</resources>
